# classroomAttention

backend/: .gitignore  init_db.py  makefile  pyproject.toml
backend/app/: crud.py  deps.py  main.py
backend/app/api/: deps.py
backend/app/api/endpoints/: auth.py  layouts.py  sessions.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py  models.py
backend/app/schemas/: layout.py  report.py  session.py  user.py
frontend/: biaozhu.html
student-dashboard/: .env.development  .gitignore  README.md  package-lock.json  package.json
student-dashboard/src/: App.vue  auth.js  main.js
student-dashboard/src/assets/: main.css
student-dashboard/src/components/: Sidebar.vue  ToastNotification.vue
student-dashboard/src/composables/: useToast.js
student-dashboard/src/router/: index.js
student-dashboard/src/views/: AuthView.vue  HomeView.vue  LayoutsView.vue  LoView.vue  LoginView.vue
